tests/invalid/foreign_type_2.err_exp2
foreign_type_2.m:022: In clause for function `unwrap_foreign'/1:
foreign_type_2.m:022:   in argument 1 of clause head:
foreign_type_2.m:022:   error: [38;5;203mundefined[39;49m symbol [38;5;87m`foreign'/1.[39;49m
